Página da OBR adicionada

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div class="container">
 
-        <img src="./Imagens/Engrenagens.png" alt="" id="gear1">
-        <img src="./Imagens/Engrenagens.png" alt="" id="gear2">
+        <img src="./assets/Engrenagens.png" alt="" id="gear1">
+        <img src="./assets/Engrenagens.png" alt="" id="gear2">
 
-        <img id="logoBL" src="./Imagens/Logo Blueline.png" alt="">
+        <img id="logoBL" src="./assets/Logo Blueline.png" alt="">
 
         <div id="BemVindos">
             <h1>Somos a Blueline</h1>
@@ -25,7 +25,7 @@
 
         <div class="cards">
             <div class="card">
-                <a href="#" class="cardContent"><img src="#" alt=""><h1 class="cardTitle">OBR</h1></a>
+                <a href="./Página_OBR/index.html" class="cardContent" target="_blank"><img src="#" alt=""><h1 class="cardTitle">OBR</h1></a>
             </div>
             <div class="card">
                 <a href="#" class="cardContent"><img src="#" alt=""><h1 class="cardTitle">TBR</h1></a>
