--- a/Página_OBR/index.html
+++ b/Página_OBR/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=Teko:wght@300..700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Blueline</title>
 </head>
@@ -15,26 +14,32 @@
 <body>
     <header class="headerOptions">
         <div class="img">
-            <a href="/ProjetoBL/index.html" target="_blank">
-                <img src="/ProjetoBL/assets/Logo Blueline.png" alt="" id="logoHeader">
+            <a href="../index.html" target="_blank">
+                <img src="../assets/Logo Blueline.png" alt="Logo Blueline" id="logoHeader">
             </a>
         </div>
 
-        <ul class="menu">
-            <li class="contatos"><a href="#">Contatos <img id="setinha" src="./assets/seta-para-baixo.png" alt=""></a>
-                <div id="dropdownContatos">
-                    <ul>
-                        <li><a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a></li>
-                        <li><a href="#" target="_blank">Integrantes</a></li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-
+        <nav>
+            <ul class="menu">
+                <li class="contatos">
+                    <a href="#contatos">Contatos <img id="setinha" src="./assets/seta-para-baixo.png" alt="Seta para abrir contatos"></a>
+                    <div id="dropdownContatos">
+                        <ul>
+                            <li><a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a></li>
+                            <li><a href="#" target="_blank">Integrantes</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </nav>
     </header>
 
-    <div class="container">
+    <main class="container">
         <div id="obrTitle">
             <h1>Olimpíada Brasileira De Robótica</h1>
         </div>
-    </div>
+    </main>
+
+</body>
+
+</html>
