--- a/Página_OBR/index.html
+++ b/Página_OBR/index.html
@@ -9,27 +9,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=Teko:wght@300..700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Blueline</title>
+    <title>OBR Blueline</title>
+
+
 </head>
 
 <body>
     <header class="headerOptions">
         <div class="img">
-            <a href="/ProjetoBL/index.html" target="_blank">
-                <img src="/ProjetoBL/assets/Logo Blueline.png" alt="" id="logoHeader">
+            <a href="/index.html">
+                <img src="/assets/Logo Blueline.png" alt="" id="logoHeader">
             </a>
         </div>
 
-        <ul class="menu">
-            <li class="contatos"><a href="#">Contatos <img id="setinha" src="./assets/seta-para-baixo.png" alt=""></a>
-                <div id="dropdownContatos">
-                    <ul>
-                        <li><a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a></li>
-                        <li><a href="#" target="_blank">Integrantes</a></li>
-                    </ul>
-                </div>
+        <div class="menu">
+            <p class="contatos"><a href="#">Contatos <img id="setinha" src="./assets/seta-para-baixo.png" alt=""></a>
+            <div id="dropdownContatos">
+                <a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a>
+                <a href="#" target="_blank">Integrantes</a>
+            </div>
             </li>
-        </ul>
+        </div>
 
     </header>
 
