--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=Teko:wght@300..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Blueline</title>
 </head>
 
 <body>
+
     <div class="container">
 
         <img src="./assets/Engrenagens.png" alt="" id="gear1">
@@ -25,16 +27,23 @@
 
         <div class="cards">
             <div class="card">
-                <a href="./Página_OBR/index.html" class="cardContent" target="_blank"><img src="#" alt=""><h1 class="cardTitle">OBR</h1></a>
+                <a href="../Página_OBR/index.html" class="cardContent"><img src="#" alt="">
+                    <h1 class="cardTitle">OBR</h1>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="cardContent"><img src="#" alt=""><h1 class="cardTitle">TBR</h1></a>
+                <a href="#" class="cardContent"><img src="#" alt="">
+                    <h1 class="cardTitle">TBR</h1>
+                </a>
             </div>
             <div class="card">
-                <a href="#" class="cardContent"><img src="#" alt=""><h1 id="cardTitle">Projetos Internos</h1></a>
+                <a href="#" class="cardContent"><img src="#" alt="">
+                    <h1 id="cardTitle">Projetos Internos</h1>
+                </a>
             </div>
         </div>
 
     </div>
+</body>
 
 </html>
