--- a/Página_OBR/index.html
+++ b/Página_OBR/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
     <header class="headerOptions">
         <div class="img">
             <a href="/index.html">
@@ -22,14 +23,21 @@
             </a>
         </div>
 
-        <div class="menu">
-            <p class="contatos"><a href="#">Contatos <img id="setinha" src="./assets/seta-para-baixo.png" alt=""></a>
-            <div id="dropdownContatos">
-                <a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a>
-                <a href="#" target="_blank">Integrantes</a>
-            </div>
+        <ul class="menu">
+            <li class="contatos"><a href="#">Contatos <img id="setinha" src="./assets/seta-para-baixo.png" alt=""></a>
+                <div id="dropdownContatos">
+                    <ul>
+                        <li><a href="https://www.instagram.com/_amilcaremattei_ofc/" target="_blank">Amilcare Mattei</a></li>
+                        <li><a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a></li>
+                    </ul>
+                </div>
             </li>
-        </div>
+
+            <li><a href="#" target="_blank">Integrantes</a></li>
+
+
+        </ul>
+
 
     </header>
 
