--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
         <img src="./assets/Engrenagens.png" alt="" id="gear1">
         <img src="./assets/Engrenagens.png" alt="" id="gear2">
-
         <img id="logoBL" src="./assets/Logo Blueline.png" alt="">
 
         <div id="BemVindos">
@@ -27,12 +26,12 @@
 
         <div class="cards">
             <div class="card">
-                <a href="../Página_OBR/index.html" class="cardContent"><img src="#" alt="">
+                <a href="./Página_OBR/index.html" class="cardContent"><img src="#" alt="">
                     <h1 class="cardTitle">OBR</h1>
                 </a>
             </div>
             <div class="card">
-                <a href="#" class="cardContent"><img src="#" alt="">
+                <a href="./Página_TBR/index.html" class="cardContent"><img src="#" alt="">
                     <h1 class="cardTitle">TBR</h1>
                 </a>
             </div>
