--- a/Página_TBR/index.html
+++ b/Página_TBR/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">    
-    <title>Blueline - TBR</title>
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=Teko:wght@300..700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <title>TBR Blueline</title>
+
 </head>
+
 <body>
-    <header>
-        <h1 id="TBR">Torneio Brasil de Robotica</h1>
-        <nav>
-            <ul>
-                <li href="Merito">Merito Cientifico</li>
-            </ul>
-        </nav>
+    <header class="headerOptions">
+        <div class="img">
+            <a href="/index.html">
+                <img src="/assets/Logo Blueline.png" alt="" id="logoHeader">
+            </a>
+        </div>
+
+        <div class="menu">
+            <p class="contatos"><a href="#">Contatos</a>
+            <div id="dropdownContatos">
+                <a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a>
+                <a href="#" target="_blank">Integrantes</a>
+            </div>
+            </li>
+        </div>
+
     </header>
-</body>
-</html>
+
+    <div class="container">
+        <div id="tbrTitle">
+            <h1>Torneio Brasil De Robótica</h1>
+        </div>
+    </div>
