--- a/Página_TBR/index.html
+++ b/Página_TBR/index.html
@@ -21,14 +21,21 @@
             </a>
         </div>
 
-        <div class="menu">
-            <p class="contatos"><a href="#">Contatos</a>
-            <div id="dropdownContatos">
-                <a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a>
-                <a href="#" target="_blank">Integrantes</a>
-            </div>
+        <ul class="menu">
+            <li class="contatos"><a href="#">Contatos <img id="setinha" src="./assets/seta-para-baixo.png" alt=""></a>
+                <div id="dropdownContatos">
+                    <ul>
+                        <li><a href="https://www.instagram.com/_amilcaremattei_ofc/" target="_blank">Amilcare Mattei</a></li>
+                        <li><a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a></li>
+                    </ul>
+                </div>
             </li>
-        </div>
+
+            <li><a href="#" target="_blank">Integrantes</a></li>
+
+
+        </ul>
+
 
     </header>
 
