--- a/Página_OBR/index.html
+++ b/Página_OBR/index.html
@@ -27,7 +27,8 @@
             <li class="contatos"><a href="#">Contatos <img id="setinha" src="./assets/seta-para-baixo.png" alt=""></a>
                 <div id="dropdownContatos">
                     <ul>
-                        <li><a href="https://www.instagram.com/_amilcaremattei_ofc/" target="_blank">Amilcare Mattei</a></li>
+                        <li><a href="https://www.instagram.com/_amilcaremattei_ofc/" target="_blank">Amilcare Mattei</a>
+                        </li>
                         <li><a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a></li>
                     </ul>
                 </div>
@@ -42,7 +43,32 @@
     </header>
 
     <div class="container">
+
         <div id="obrTitle">
             <h1>Olimpíada Brasileira De Robótica</h1>
+        </div>
+
+        <div class="content">
+            <p>Desde 2023 a Equipe Blueline participa da Olimpíada Brasileira de Robótica, buscando evoluir, aprender e
+                adquirir novas experiências.
+
+                No dia 17/06/2023, a equipe Blueline participou da Etapa Regional em São José do Rio Preto, na UNORTE -
+                Centro Universitário do Norte de São Paulo, contando com duas equipes, Blueline Masters e Blueline
+                Strongs, onde ficamos em 6º e 18° lugar, respectivamente, classificando a equipe Masters para a etapa
+                Estadual.
+            </p>
+
+            <img src="/assets/Regional OBR 2023.jpg" alt="" id="reg2023">
+
+            <p>
+                No dia 19/08/2023, a Blueline Masters participou da etapa regional em São Bernardo do Campo, na FEI -
+                Campus São Bernardo do Campo, sendo a única escola pública da região a participar dessa etapa. Dessa
+                vez, a equipe Strongs ficou na torcida. Os Masters infelizmente não classificaram para a etapa nacional,
+                ficando em xº lugar, porém, adquirimos muito conhecimento observando os robôs das outras equipes
+                participantes.
+            </p>
+
+            <img src="/assets/Estadual OBR 2023.jpg" alt="" id="est2023">
+
         </div>
     </div>
