--- a/Página_OBR/index.html
+++ b/Página_OBR/index.html
@@ -19,7 +19,7 @@
     <header class="headerOptions">
         <div class="img">
             <a href="/index.html">
-                <img src="/assets/Logo Blueline.png" alt="" id="logoHeader">
+                <img src="./assets/Logo Blueline.png" alt="" id="logoHeader">
             </a>
         </div>
 
@@ -58,7 +58,7 @@
                 Estadual.
             </p>
 
-            <img src="/assets/Regional OBR 2023.jpg" alt="" id="reg2023">
+            <img src="./assets/Regional OBR 2023.jpg" alt="" id="reg2023">
 
             <p>
                 No dia 19/08/2023, a Blueline Masters participou da etapa regional em São Bernardo do Campo, na FEI -
@@ -68,7 +68,7 @@
                 participantes.
             </p>
 
-            <img src="/assets/Estadual OBR 2023.jpg" alt="" id="est2023">
+            <img src="./assets/Estadual OBR 2023.jpg" alt="" id="est2023">
 
         </div>
     </div>
