--- a/Página_OBR/index.html
+++ b/Página_OBR/index.html
@@ -19,12 +19,12 @@
     <header class="headerOptions">
         <div class="img">
             <a href="/index.html">
-                <img src="./assets/Logo Blueline.png" alt="" id="logoHeader">
+                <img src="/assets/Logo Blueline.png" alt="" id="logoHeader">
             </a>
         </div>
 
         <ul class="menu">
-            <li class="contatos"><a href="#">Contatos <img id="setinha" src="./assets/seta-para-baixo.png" alt=""></a>
+            <li class="contatos"><a href="#">Contatos</a>
                 <div id="dropdownContatos">
                     <ul>
                         <li><a href="https://www.instagram.com/_amilcaremattei_ofc/" target="_blank">Amilcare Mattei</a>
@@ -58,7 +58,7 @@
                 Estadual.
             </p>
 
-            <img src="./assets/Regional OBR 2023.jpg" alt="" id="reg2023">
+            <img src="/assets/Regional OBR 2023.jpg" alt="" id="reg2023">
 
             <p>
                 No dia 19/08/2023, a Blueline Masters participou da etapa regional em São Bernardo do Campo, na FEI -
@@ -68,7 +68,6 @@
                 participantes.
             </p>
 
-            <img src="./assets/Estadual OBR 2023.jpg" alt="" id="est2023">
-
+            <img src="/assets/Estadual OBR 2023.jpg" alt="" id="est2023">
         </div>
     </div>
