--- a/Página_TBR/index.html
+++ b/Página_TBR/index.html
@@ -25,7 +25,8 @@
             <li class="contatos"><a href="#">Contatos <img id="setinha" src="./assets/seta-para-baixo.png" alt=""></a>
                 <div id="dropdownContatos">
                     <ul>
-                        <li><a href="https://www.instagram.com/_amilcaremattei_ofc/" target="_blank">Amilcare Mattei</a></li>
+                        <li><a href="https://www.instagram.com/_amilcaremattei_ofc/" target="_blank">Amilcare Mattei</a>
+                        </li>
                         <li><a href="https://www.instagram.com/amblueline/" target="_blank">Instagram</a></li>
                     </ul>
                 </div>
@@ -42,5 +43,9 @@
     <div class="container">
         <div id="tbrTitle">
             <h1>Torneio Brasil De Robótica</h1>
+            <p>Em 2022 os alunos do Clube Juvenil de Robótica aceitaram o desafio de participar do Torneio Brasil de
+                Robótica pela primeira vez. Sem nenhuma experiência, a equipe conseguiu uma classificação para a etapa
+                nacional no Rio De Janeiro</p>
+            <img src="/assets/Regional TBR 2022.jpg" alt="" id="reg2022">
         </div>
     </div>
