--- a/Página_OBR/index.html
+++ b/Página_OBR/index.html
@@ -34,7 +34,7 @@
                 </div>
             </li>
 
-            <li><a href="#" target="_blank">Integrantes</a></li>
+            <li><a href="/Integrantes/index.html" target="_blank">Integrantes</a></li>
 
 
         </ul>
