--- a/Página_TBR/index.html
+++ b/Página_TBR/index.html
@@ -32,7 +32,7 @@
                 </div>
             </li>
 
-            <li><a href="#" target="_blank">Integrantes</a></li>
+            <li><a href="/Integrantes/index.html" target="_blank">Integrantes</a></li>
 
 
         </ul>
