--- a/Integrantes/index.html
+++ b/Integrantes/index.html
@@ -59,8 +59,8 @@
 
             <div class="ints">
                 <a href="#">
-                    <img src="#" alt="2" class="profile">
-                    <h2>Bruno</h2>
+                    <img src="./Fotos Integrantes/Bruno Pegassi.jpg" alt="2" class="profile">
+                    <h2>Bruno P.</h2>
                 </a>
             </div>
         </div>
