--- a/Integrantes/index.html
+++ b/Integrantes/index.html
@@ -49,19 +49,69 @@
         </div>
 
         <div class="content">
-
             <div class="ints">
-                <a href="https://www.instagram.com/n0tknd/">
-                    <img src="./Fotos Integrantes/Kendy H.jpg" alt="1" class="profile">
-                    <h2>Kendy H.</h2>
+                <a href="#" target="_blank">
+                    <img src="./Fotos Integrantes/Alexandre S.jpg" alt="1" class="profile">
                 </a>
+                <h2>Alexandre S.</h2>
             </div>
 
             <div class="ints">
-                <a href="#">
-                    <img src="./Fotos Integrantes/Bruno Pegassi.jpg" alt="2" class="profile">
-                    <h2>Bruno P.</h2>
+                <a href="#" target="_blank">
+                    <img src="./Fotos Integrantes/Bruno P.jpg" alt="2" class="profile">
                 </a>
+                <h2>Bruno P.</h2>
             </div>
+
+            <div class="ints">
+                <a href="https://www.instagram.com/felipe_alvesrodri/" target="_blank">
+                    <img src="./Fotos Integrantes/Felipe A.jpg" alt="3" class="profile">
+                </a>
+                <h2>Felipe A.</h2>
+            </div>
+
+            <div class="ints">
+                <a href="https://www.instagram.com/n0tknd/" target="_blank">
+                    <img src="./Fotos Integrantes/Kendy H.jpg" alt="4" class="profile">
+                </a>
+                <h2>Kendy H.</h2>
+            </div>
+            <div class="ints">
+                <a href="https://www.instagram.com/maah.bertarelli/" target="_blank">
+                    <img src="./Fotos Integrantes/Marcella B.jpg" alt="5" class="profile">
+                </a>
+                <h2>Marcella B.</h2>
+            </div>
+
+            <div class="ints">
+                <a href="https://www.instagram.com/amariagms/" target="_blank">
+                    <img src="./Fotos Integrantes/Maria G.jpg" alt="6" class="profile">
+                </a>
+                <h2>Maria G.</h2>
+            </div>
+
+            <div class="ints">
+                <a href="https://www.instagram.com/marjorysalessantos/" target="_blank">
+                    <img src="./Fotos Integrantes/Marjory S.jpg" alt="7" class="profile">
+                </a>
+                <h2>Marjory S.</h2>
+            </div>
+
+            <div class="ints">
+                <a href="https://www.instagram.com/matheus_kumagai/" target="_blank">
+                    <img src="./Fotos Integrantes/Matheus K.jpg" alt="" class="profile">
+                </a>
+                <h2>Matheus K.</h2>
+            </div>
+
+            <div class="ints">
+                <a href="#" target="_blank">
+                    <img src="#" alt="" class="profile">
+                </a>
+                <h2>Sam C.</h2>
+            </div>
+
         </div>
+
     </div>
+</body>
