--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
         <div class="cards">
             <div class="card">
-                <a href="/Página_OBR/index.html" class="cardContent"><img src="#" alt="">
+                <a href="./Página_OBR/index.html" class="cardContent"><img src="#" alt="">
                     <h1 class="cardTitle">OBR</h1>
                 </a>
             </div>
             <div class="card">
-                <a href="/Página_TBR/index.html" class="cardContent"><img src="#" alt="">
+                <a href="./Página_TBR/index.html" class="cardContent"><img src="#" alt="">
                     <h1 class="cardTitle">TBR</h1>
                 </a>
             </div>
