index.html update

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <div class="container">
 
-        <img src="./assets/Engrenagens.png" alt="" id="gear1">
-        <img src="./assets/Engrenagens.png" alt="" id="gear2">
-        <img id="logoBL" src="./assets/Logo Blueline.png" alt="">
+        <img src="/assets/Engrenagens.png" alt="" id="gear1">
+        <img src="/assets/Engrenagens.png" alt="" id="gear2">
+        <img id="logoBL" src="/assets/Logo Blueline.png" alt="">
 
         <div id="BemVindos">
             <h1>Somos a Blueline</h1>
@@ -26,17 +26,17 @@
 
         <div class="cards">
             <div class="card">
-                <a href="../Página_OBR/index.html" class="cardContent"><img src="#" alt="">
+                <a href="/Página_OBR/index.html" class="cardContent" target="_blank"><img src="#" alt="">
                     <h1 class="cardTitle">OBR</h1>
                 </a>
             </div>
             <div class="card">
-                <a href="./Página_TBR/index.html" class="cardContent"><img src="#" alt="">
+                <a href="/Página_TBR/index.html" class="cardContent" target="_blank"><img src="#" alt="">
                     <h1 class="cardTitle">TBR</h1>
                 </a>
             </div>
             <div class="card">
-                <a href="#" class="cardContent"><img src="#" alt="">
+                <a href="#" class="cardContent" target="_blank"><img src="#" alt="">
                     <h1 id="cardTitle">Projetos Internos</h1>
                 </a>
             </div>
