--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <div class="container">
 
-        <img src="/assets/Engrenagens.png" alt="" id="gear1">
-        <img src="/assets/Engrenagens.png" alt="" id="gear2">
-        <img id="logoBL" src="/assets/Logo Blueline.png" alt="">
+        <img src="./assets/Engrenagens.png" alt="" id="gear1">
+        <img src="./assets/Engrenagens.png" alt="" id="gear2">
+        <img id="logoBL" src="./assets/Logo Blueline.png" alt="">
 
         <div id="BemVindos">
             <h1>Somos a Blueline</h1>
