--- a/Página_TBR/tbr_page.html
+++ b/Página_TBR/tbr_page.html
@@ -16,8 +16,8 @@
 <body>
     <header class="headerOptions">
         <div class="img">
-            <a href="/index.html">
-                <img src="/assets/Logo Blueline.png" alt="" id="logoHeader">
+            <a href="./index.html">
+                <img src="./assets/Logo Blueline.png" alt="" id="logoHeader">
             </a>
         </div>
 
@@ -32,7 +32,7 @@
                 </div>
             </li>
 
-            <li><a href="/Integrantes/index.html" target="_blank">Integrantes</a></li>
+            <li><a href="./Integrantes/index.html" target="_blank">Integrantes</a></li>
 
 
         </ul>
@@ -46,6 +46,6 @@
             <p>Em 2022 os alunos do Clube Juvenil de Robótica aceitaram o desafio de participar do Torneio Brasil de
                 Robótica pela primeira vez. Sem nenhuma experiência, a equipe conseguiu uma classificação para a etapa
                 nacional no Rio De Janeiro</p>
-            <img src="/assets/Regional TBR 2022.jpg" alt="" id="reg2022">
+            <img src="./assets/Regional TBR 2022.jpg" alt="" id="reg2022">
         </div>
     </div>
