--- a/Página_OBR/obr_page.html
+++ b/Página_OBR/obr_page.html
@@ -18,8 +18,8 @@
 
     <header class="headerOptions">
         <div class="img">
-            <a href="/index.html">
-                <img src="/assets/Logo Blueline.png" alt="" id="logoHeader">
+            <a href="./index.html">
+                <img src="./assets/Logo Blueline.png" alt="" id="logoHeader">
             </a>
         </div>
 
@@ -34,7 +34,7 @@
                 </div>
             </li>
 
-            <li><a href="/Integrantes/index.html" target="_blank">Integrantes</a></li>
+            <li><a href="./Integrantes/index.html" target="_blank">Integrantes</a></li>
 
 
         </ul>
@@ -58,7 +58,7 @@
                 Estadual.
             </p>
 
-            <img src="/assets/Regional OBR 2023.jpg" alt="" id="reg2023">
+            <img src="./assets/Regional OBR 2023.jpg" alt="" id="reg2023">
 
             <p>
                 No dia 19/08/2023, a Blueline Masters participou da etapa regional em São Bernardo do Campo, na FEI -
@@ -68,6 +68,6 @@
                 participantes.
             </p>
 
-            <img src="/assets/Estadual OBR 2023.jpg" alt="" id="est2023">
+            <img src="./assets/Estadual OBR 2023.jpg" alt="" id="est2023">
         </div>
     </div>
